--- a/src/lotteryPanel/lotteryDisplayPresenter.css
+++ b/src/lotteryPanel/lotteryDisplayPresenter.css
@@ -1,5 +1,5 @@
 div.lotteryDisplayPresenter {
-  border: 1px solid black;
-  width: 300px;
-  height: 100px;
+  width: 500px;
+  height: 300px;
+  font-size: 300%;
 }
