cssの当て方のリファクタリング

--- a/src/lotteryPanel/history/historyPresenter.css
+++ b/src/lotteryPanel/history/historyPresenter.css
@@ -2,9 +2,13 @@
   float: right;
 }
 
-#history {
+.history {
   background-color: white;
   display: none;
   float: right;
   position: static;
+}
+
+.history__active {
+  display: block;
 }
