くじびきモードのcssの修正、コンポーネント名の修正

--- a/src/switchPanel/switchPanelPresenter.css
+++ b/src/switchPanel/switchPanelPresenter.css
@@ -2,11 +2,8 @@ div#switchPanelPresenter {
   height: 40px;
 }
 
-button.switchPanelPresenterBtn {
-  background-color: aliceblue;
-  border-radius: 5px;
+.switch-panel__btn {
   float: right;
-  font-size: 1em;
   padding: 5px;
   margin: 5px;
 }
