--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,16 @@
 }
 
 div {
-  /* display: inline-block; */
   border: 1px solid rgb(201, 198, 198);
-  /* width: 300px;
-  height: 100px; */
   margin: 10px;
+}
+
+.btn {
+  background-color: aliceblue;
+  border-radius: 5px;
+  font-size: 1em;
+}
+
+.input {
+  font-size: 1em;
 }
