--- a/src/contentContainer/lottery/history/historyPresenter.css
+++ b/src/contentContainer/lottery/history/historyPresenter.css
@@ -1,17 +1,16 @@
-button.historyBtn {
-  background-color: aliceblue;
-  border-radius: 5px;
+.history__btn {
   float: right;
-  font-size: 1em;
   padding: 5px;
   margin: 5px;
 }
 
 .history {
   background-color: white;
+  border: 2px solid rgb(90, 90, 90);
+  border-radius: 5px;
   display: none;
   float: right;
-  position: static;
+  font-size: 1em;
   width: 100px;
 }
 
