--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,15 @@
 }
 
 div {
-  border: 1px solid rgb(201, 198, 198);
-  margin: 10px;
+  /* border: 1px solid rgb(201, 198, 198);
+  margin: 10px; */
 }
 
 .btn {
   background-color: aliceblue;
   border-radius: 5px;
   font-size: 1em;
+  padding: 5px;
 }
 
 .input {
