--- a/src/contentContainer/lottery/lotteryContainer.css
+++ b/src/contentContainer/lottery/lotteryContainer.css
@@ -1,3 +1,10 @@
+.lottery-container {
+  margin: 10px 0;
+}
+
 .lottery-operator {
+  align-items: center;
   display: flex;
+  justify-content: flex-end;
+  margin-top: 10px;
 }
