--- a/src/contentContainer/lottery/changeLotNum/changeLotNumPresenter.css
+++ b/src/contentContainer/lottery/changeLotNum/changeLotNumPresenter.css
@@ -1,8 +1,3 @@
-.change-lot-num {
-  float: right;
-  margin: auto 0 auto auto;
-}
-
 .change-lot-num__btn {
-  margin: auto 5px auto 5px;
+  margin: auto 5px;
 }
