--- a/src/contentContainer/lottery/history/historyDeletePresenter.css
+++ b/src/contentContainer/lottery/history/historyDeletePresenter.css
@@ -1,4 +1,5 @@
-.history-delete__btn {
-  padding: 5px;
-  margin: 5px auto 5px 10px;
+.history-delete {
+  display: flex;
+  justify-content: center;
+  margin: 5px;
 }
