--- a/src/contentContainer/lottery/history/historyPresenter.css
+++ b/src/contentContainer/lottery/history/historyPresenter.css
@@ -1,12 +1,11 @@
 .history__btn {
   float: right;
-  padding: 5px;
   margin: 5px;
 }
 
 .history {
   background-color: white;
-  border: 2px solid rgb(90, 90, 90);
+  border: 2px solid lightsteelblue;
   border-radius: 5px;
   display: none;
   float: right;
@@ -16,4 +15,5 @@
 
 .history__active {
   display: block;
+  margin: 5px 0;
 }
