--- a/src/contentContainer/lottery/lotteryDisplay/lotteryDisplayPresenter.css
+++ b/src/contentContainer/lottery/lotteryDisplay/lotteryDisplayPresenter.css
@@ -1,6 +1,7 @@
 .lottery-display {
+  border: 1px solid rgb(201, 198, 198);
+  border-radius: 5px;
   font-size: 300%;
-  padding: 5px;
+  padding: 10px;
   min-height: 300px;
-  width: 90%;
 }
