細かいcssの調整終了

--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,19 @@
   border-radius: 5px;
   font-size: 1em;
   padding: 5px;
+  min-width: fit-content;
 }
 
 .input {
+  border-radius: 5px;
+  border-width: 1px;
+  border-color: darkgrey;
+  font-size: 1em;
+  padding: 5px;
+  width: 50px;
+}
+
+.textarea {
   border-radius: 5px;
   border-width: 1px;
   border-color: darkgrey;
