--- a/src/contentContainer/setting/settingContainer.css
+++ b/src/contentContainer/setting/settingContainer.css
@@ -1,17 +1,21 @@
-.enter-lottery {
-  align-items: center;
-  display: inline-flex;
-  /* background-color: aliceblue; */
-  /* justify-content: center; */
-  padding: 10px;
-  width: 90%;
+.setting {
+  border: 1px solid rgb(201, 198, 198);
+  border-radius: 5px;
+  padding: 5px;
+  margin: 10px 0;
+  min-width: 400px;
 }
 
-.enterd-lottery {
+.setting__enter-lottery {
   margin: 0px auto auto auto;
-  min-width: 40%;
+  display: flex;
+  padding: 10px;
 }
 
 .select-enter-mode__btn {
   margin: 5px;
+}
+
+.setting__hyphen {
+  padding: 5px 10px 0 10px;
 }
