選択中のボタンのcssの変更のロジックを追加

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,9 @@
   padding: 5px;
   min-width: fit-content;
 }
+.btn_active {
+  background-color: rgb(190, 217, 243);
+}
 
 .input {
   border-radius: 5px;
